@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/kflickr
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/kflickr/ChangeLog,v 1.11 2009/11/22 23:40:25 scarabeus Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/kflickr/ChangeLog,v 1.12 2011/02/02 03:01:56 tampakrap Exp $
+
+  02 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org>
+  kflickr-0.9.1_p1.ebuild:
+  EAPI3, use array for DOCS
 
   22 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
   -files/kflickr-0.9.1-desktop-file.diff:
